# ray-audio

./: .gitignore  CMakeLists.txt  Makefile  README.md  Wavetable.cpp  display  ray-audio  simple.xml  small.xml  view.xml
include/: Audio.hpp  BaseComponent.hpp  CairoContext.h  CairoLib.hpp  Component.h  Graphics.h  Library.h  Library.hpp  Osc.h  SDL_Graphics.h  SDL_Graphics.hpp  XmlParser.h  XmlParser.hpp
src/: Audio.cpp  CairoLib.cpp  DirTree.cpp  Graphics.cpp  Knob.cpp  Library.cpp  Osc.cpp  Oscilloscope.cpp  SDL_Graphics.cpp  Slider.cpp  Toggle.cpp  VU.cpp  WaveFile.cpp  Wavetable.cpp  XmlParser.cpp  _main.cpp
src/components/: DirTree.cpp  Knob.cpp  Oscilloscope.cpp  Toggle.cpp
